# swagger_output.json
@@ -5,8 +5,8 @@
     "title": "Flipic API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:4100",
-  "basePath": "/quiz",
+  "host": "localhost:4101",
+  "basePath": "/",
   "tags": [
     {
       "name": "Quiz",
@@ -71,6 +71,41 @@
             }
           }
         ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/quiz/{id}": {
+      "get": {
+        "tags": [
+          "Quiz"
+        ],
+        "description": "Endpoint to get a quiz",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/quiz-all": {
+      "get": {
+        "tags": [
+          "Quiz"
+        ],
+        "description": "Endpoint to get all quiz",
+        "parameters": [],
         "responses": {
           "201": {
             "description": "Created"
